--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-
+	<meta name="description" content="A utility to determine your potential WCA rank">
+	<meta name="author" content="louismeunier">
 	<title>what's my rank?</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
