Fixed meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 	<meta name="description" content="A utility to determine your potential WCA rank">
 	<meta name="author" content="louismeunier">
-	<meta name="og:description" content="a simple cubing utility">
-	<meta name="og:image" content="images/favicon.png">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="what's my rank">
+	<meta property="og:description" content="a simple cubing utility">
+	<meta property="og:image" content="images/favicon.png">
 	<title>what's my rank?</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
