--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
 	<meta property="og:image" content="images/favicon.png">
 	<title>what's my rank?</title>
 
+	<link rel="stylesheet" href="/cubing-icons.css">
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
-
 	<script defer src='/build/bundle.js'></script>
 </head>
 
